<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">登陆界面</string>
    <string name="action_settings">Settings</string>
    <string name="edition">版本V1.0</string>
    <string name="hello_start">欢迎使用！</string>
    <string name="user_label">用户:</string>
    <string name="password_label"> 密码:</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login_label">登录</string>
    <string name="register_label">注册</string>

</resources>
