<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
	<!-- 版本标题 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/edition"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />
	<!-- 欢迎语句 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/hello_start"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />
	<!-- 用户名和密码标签及输入框布局管理器，作用是使下方整体居中 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
		<!-- 第一行用户标签和输入框布局管理器 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >
			
            <!-- 用户名标签 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:text="@string/user_label"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
			
            <!-- 用户名输入框 -->
            <EditText
                android:id="@+id/sample_edit_text0"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:hint="请输入用户名"
                android:maxLength="20"
                android:digits="qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM" />
            
        </LinearLayout>
		
        <!-- 用户密码标签 及输入框布局管理器-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >
			<!-- 用户密码标签 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:text="@string/password_label"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
			<!-- 用户密码输入框 -->
            <EditText
                android:id="@+id/pwdeidttext"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:ems="10"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:maxLength="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
			
           <!-- 忘记密码 -->
           <TextView  
        	android:id="@+id/sound_help"  
        	android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  
        	android:layout_marginTop="15dip"  
        	android:layout_marginLeft="15dip"  
        	android:text="@string/forget_pwd"  
        	android:textColor="#29981A" />
        </LinearLayout>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label" />

    </LinearLayout>

    
</LinearLayout>